@@ -9,3 +9,5 @@
 9) Tungsten oredicted as wolfram for more mod compatibility
 10) Small Blends/small piles of powder oredicted as dustTiny instead of smalldust
 11) Fishing Rods now actually work. (Thanks to lclc98 for the assistance)
+12) Veinminer integration
+13) Ender IO Integration
